--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [egg_info]
-tag_build = 
+tag_build =
 tag_date = 0
 tag_svn_revision = 0
 
@@ -12,3 +12,11 @@ license_file = LICENSE
 [flake8]
 max-line-length = 88
 extend-ignore = E203
+
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+combine_as_imports=True
+line_length=88
+known_third_party = async_timeout,setuptools
